@@ -11,7 +11,10 @@
 [% IF displaymenu != 0 %]
 <p>
 <div class="menu">
-  <a href="[% list_url | uri | html_entity %]">List open topics</a>
+  <a href="[% list_url | uri | html_entity %]">List all open topics</a>
+  [% IF list_open_topics_in_project_url != "" %]
+  | <a href="[% list_open_topics_in_project_url | uri | html_entity %]">List open topics in project</a>
+  [% END %]
   | <a href="[% create_topic_url | uri | html_entity %]">Create new topic</a>
   [% IF searchlist_enabled != 0 %] | <a href="[% search_url | uri | html_entity %]">Search</a> [% END %]
   [% IF help != "" %] | <a href="[% doc_url | uri | html_entity %]/[% help %]">Help</a>[% END %]
