@@ -14,6 +14,9 @@ Version 1.8.4
   field will be a number of hyperlinks to the associated bug tracking
   records.
 
+* Added the link "List open topics in project" to all the view topic
+  screens for user convenience on large multi-project deployments.
+
 * Refactored CvsPserver and CvsLocal into a single object, Cvs.
 
 Version 1.8.3
